--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,7 @@ body {
   margin: 0;
   min-height: 100vh;
   position: relative;
+  overflow: hidden;
 }
 body.dark {
   background-color: #252530;
